# silk-convert

./: .gitignore  COMPARISON.md  Cargo.toml  LICENSE  README.cn.md  README.md  SECURITY.md
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml
changelog/: v0.3.0.md
docs/: _config.yml  faq.md  formats.md  index.md  install.md  usage.md
docs/_layouts/: default.html
src/: lib.rs  main.rs
src/codec/: mod.rs
src/subcmd/: batch.rs  convert.rs  decode.rs  detect.rs  encode.rs  info.rs  mod.rs
