[package]
name = "silk-convert"
version = "0.2.0"
edition = "2021"
description = "Convert WeChat SILK to MP3/WAV/Opus/AAC and back. Fast single binary, no Python deps."
license = "MIT"
repository = "https://github.com/ljh-sh/silk-convert"
keywords = ["silk", "wechat", "audio", "converter", "codec"]
categories = ["command-line-utilities", "multimedia", "codec"]

[[bin]]
name = "silk-convert"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
silk-codec = "0.2"
hound = "3.5"
symphonia = { version = "0.5", features = ["all"]]
mp3lame-encoder = "0.2"
opus = "0.3"
indicatif = "0.17"
walkdir = "2.5"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
