[package]
name = "silk-convert"
version = "0.2.1"
edition = "2021"
description = "Convert WeChat SILK to MP3/WAV/Opus/AAC and back. Fast single binary, no Python deps."
license = "MIT"
repository = "https://github.com/ljh-sh/silk-convert"
keywords = ["silk", "wechat", "audio", "converter", "codec"]
categories = ["command-line-utilities", "multimedia", "codec"]

[[bin]]
name = "silk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
hound = "3.5"
walkdir = "2.5"
indicatif = "0.17"
silk-codec = "0.2"

# v0.3.0 deps (require system libs / FFI):
# symphonia = "0.5"    # MP3/Opus/AAC/FLAC decode
# mp3lame-encoder = "0.2"  # MP3 encode (needs libmp3lame)

[profile.release]
opt-level = 3
lto = "thin"
strip = true
